# Pixi

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  appveyor.yml  azure-pipelines.yml  build_script.bat  build_script.ps1  zip_script.py
.github/workflows/: cmake.yml
Pixi/: Array.h  CMakeLists.txt  Config.cpp  Config.h  Entities.cpp  Entities.h  JsonData.cpp  JsonData.h  MemoryFile.h  Pixi.cpp  Pixi.h  Rom.cpp  Rom.h  SpritesData.cpp  SpritesData.h  StructParams.h  Util.cpp  Util.h
Pixi/MeiMei/: MeiMei.cpp  MeiMei.h
Pixi/asar/: asardll.h
Pixi/base64/: base64.cpp  base64.h
Resources/: README.txt  changelog.txt
Resources/routines/: Aiming.asm  CapeContact.asm  ChangeMap16.asm  CheckForContactAlternate.asm  CircleX.asm  CircleY.asm  ExtendedCapeClipping.asm  ExtendedGetDrawInfo.asm  ExtendedHurt.asm  ExtendedSpeed.asm  FinishOAMWrite.asm  FireballContact.asm  GetDrawInfo.asm  GetMap16.asm  LoseYoshi.asm  Random.asm  SetPlayerClippingAlternate.asm  SetSpriteClippingAlternate.asm  ShooterMain.asm  SolidSprite.asm  SpawnExtended.asm  SpawnSmoke.asm  SpawnSprite.asm  SpawnSpriteSafe.asm  Star.asm  SubHorzPos.asm  SubOffScreen.asm  SubVertPos.asm
